--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,94 @@
-//
+@import "./variables";
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: $font-primary;
+    outline: none;
+}
+
+.wrapper {
+    min-height: 100vh;
+    width: 100%;
+    padding: 1.5rem;
+    background-color: $color-body;
+
+    &__button {
+        display: block;
+        margin: 0 auto;
+        border: none;
+        border-radius: 23px;
+        background-color: blue;
+        color: white;
+        cursor: pointer;
+        width: 120px;
+        height: 50px;
+        line-height: 50px;
+        box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.3);
+        transition: 0.2s;
+
+        &:hover {
+            box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.6);
+        }
+    }
+
+    .element {
+        background-color: $color-white;
+        display: flex;
+        height: 50px;
+        width: 450px;
+        border-radius: 10px;
+        align-items: center;
+        margin: 1rem;
+        line-height: 50px;
+        box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.2);
+        transition: 0.3s;
+
+        &:hover {
+            box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.3);
+        }
+
+        > i {
+            margin-left: 0.5rem;
+            flex: 0 0 5%;
+        }
+        span {
+            flex: 0 0 60%;
+        }
+        &__divider {
+            flex: 0 0 1px;
+            background-color: lightgray;
+            height: 100%;
+        }
+        &__icons {
+            flex: 0 0 calc(30% - 1px);
+            display: flex;
+            justify-content: space-around;
+
+            p {
+                background-color: blue;
+                width: 30px;
+                color: white;
+                height: 25px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                line-height: 0;
+                border-radius: 6px;
+                transition: 0.2s;
+                font-size: 0.8rem;
+                cursor: pointer;
+
+                box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.3);
+                &:hover {
+                    box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.6);
+                }
+            }
+        }
+    }
+
+    .nested {
+        margin-left: 2rem;
+    }
+}
