--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,13 @@
     box-sizing: border-box;
     font-family: $font-primary;
     outline: none;
+    text-decoration: none;
+
+    &:visited,
+    &:active,
+    &:link {
+        color: inherit;
+    }
 }
 
 .wrapper {
@@ -14,10 +21,50 @@
     padding: 1.5rem;
     background-color: $color-body;
 
+    &__title {
+        text-align: center;
+        text-transform: capitalize;
+    }
+
+    &__form {
+        padding: 1rem;
+        margin: 2rem auto;
+        border: 10px;
+        box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.2);
+        width: 400px;
+        border-radius: 10px;
+        background-color: $color-white;
+        height: 200px;
+    }
+
+    &__input {
+        padding: 1rem;
+        width: 80%;
+        margin: 0 auto;
+
+        label {
+            padding-left: 1rem;
+            font-size: 0.8rem;
+        }
+
+        input {
+            width: 100%;
+            padding: 0.5rem 1rem;
+            border-radius: 6px;
+            border: 1px solid gray;
+        }
+        button {
+            width: 100px;
+            height: 40px;
+            line-height: 40px;
+        }
+    }
+
     &__button {
         display: block;
         margin: 0 auto;
         border: none;
+        text-align: center;
         border-radius: 23px;
         background-color: blue;
         color: white;
@@ -66,7 +113,7 @@
             display: flex;
             justify-content: space-around;
 
-            p {
+            a {
                 background-color: blue;
                 width: 30px;
                 color: white;
