--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./mixins";
 
 * {
     margin: 0;
@@ -27,14 +28,11 @@
     }
 
     &__form {
-        padding: 1rem;
-        margin: 2rem auto;
-        border: 10px;
-        box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.2);
-        width: 400px;
-        border-radius: 10px;
-        background-color: $color-white;
-        height: 200px;
+        @include form;
+    }
+
+    &__warning {
+        color: red;
     }
 
     &__input {
