--- a/resources/sass/_mixins.scss
+++ b/resources/sass/_mixins.scss
@@ -8,5 +8,24 @@
     width: 400px;
     border-radius: 10px;
     background-color: $color-white;
-    height: 200px;
+}
+
+@mixin buttonPrimary {
+    display: block;
+    margin: 0 auto;
+    border: none;
+    text-align: center;
+    border-radius: 23px;
+    background-color: blue;
+    color: white;
+    cursor: pointer;
+    width: 140px;
+    height: 40px;
+    line-height: 40px;
+    box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.3);
+    transition: 0.2s;
+
+    &:hover {
+        box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.6);
+    }
 }
