--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -22,6 +22,10 @@
     padding: 1.5rem;
     background-color: $color-body;
 
+    &__button {
+        @include buttonPrimary;
+    }
+
     &__title {
         text-align: center;
         text-transform: capitalize;
@@ -29,13 +33,18 @@
 
     &__form {
         @include form;
+
+        > h4,
+        > p {
+            margin-bottom: 0.5rem;
+        }
     }
 
     &__warning {
         color: red;
     }
 
-    &__input {
+    &__inputs {
         padding: 1rem;
         width: 80%;
         margin: 0 auto;
@@ -45,36 +54,23 @@
             font-size: 0.8rem;
         }
 
-        input {
+        input,
+        select {
             width: 100%;
+            margin-bottom: 0.5rem;
             padding: 0.5rem 1rem;
             border-radius: 6px;
             border: 1px solid gray;
         }
+
+        select {
+            padding-left: 0.8rem;
+        }
+
         button {
             width: 100px;
             height: 40px;
             line-height: 40px;
-        }
-    }
-
-    &__button {
-        display: block;
-        margin: 0 auto;
-        border: none;
-        text-align: center;
-        border-radius: 23px;
-        background-color: blue;
-        color: white;
-        cursor: pointer;
-        width: 120px;
-        height: 50px;
-        line-height: 50px;
-        box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.3);
-        transition: 0.2s;
-
-        &:hover {
-            box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.6);
         }
     }
 
@@ -98,14 +94,17 @@
             margin-left: 0.5rem;
             flex: 0 0 5%;
         }
+
         span {
             flex: 0 0 60%;
         }
+
         &__divider {
             flex: 0 0 1px;
             background-color: lightgray;
             height: 100%;
         }
+
         &__icons {
             flex: 0 0 calc(30% - 1px);
             display: flex;
