--- a/public/css/app.css
+++ b/public/css/app.css
@@ -94,6 +94,16 @@
   line-height: 40px;
 }
 
+.wrapper__message {
+  height: 40px;
+  line-height: 40px;
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  display: inline-block;
+  padding: 0 1rem;
+}
+
 .wrapper .element {
   background-color: white;
   display: flex;
