--- a/public/css/app.css
+++ b/public/css/app.css
@@ -116,10 +116,11 @@
   line-height: 50px;
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  cursor: pointer;
 }
 
 .wrapper .element:hover {
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
 }
 
 .wrapper .element > i {
@@ -160,7 +161,7 @@
 }
 
 .wrapper .element__icons a:hover {
-  box-shadow: 0px 6px 12px rgba(0, 0, 255, 0.6);
+  box-shadow: 0px 6px 12px rgba(0, 0, 255, 0.7);
 }
 
 .wrapper .nested {
