--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -96,9 +96,10 @@
         line-height: 50px;
         box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.2);
         transition: 0.3s;
+        cursor: pointer;
 
         &:hover {
-            box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.3);
+            box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: 0.35);
         }
 
         > i {
@@ -137,7 +138,7 @@
 
                 box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.3);
                 &:hover {
-                    box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.6);
+                    box-shadow: 0px 6px 12px rgba($color: blue, $alpha: 0.7);
                 }
             }
         }
