Fix rotate arrow icon

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -103,6 +103,7 @@
         }
 
         > i {
+            text-align: center;
             margin-left: 0.5rem;
             flex: 0 0 5%;
         }
