--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,7 +37,7 @@
 }
 
 .wrapper__button:hover {
-  box-shadow: 0px 6px 12px rgba(0, 0, 255, 0.6);
+  box-shadow: 0px 6px 12px rgba(0, 0, 255, 0.7);
 }
 
 .wrapper__title {
@@ -124,6 +124,7 @@
 }
 
 .wrapper .element > i {
+  text-align: center;
   margin-left: 0.5rem;
   flex: 0 0 5%;
 }
