--- a/public/css/app.css
+++ b/public/css/app.css
@@ -130,6 +130,10 @@
 }
 
 .wrapper .element span {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   flex: 0 0 60%;
 }
 
