--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,6 +45,36 @@
         color: red;
     }
 
+    &__sortOptions {
+        position: relative;
+        width: 200px;
+
+        > button {
+            @include buttonPrimary;
+            margin-bottom: 10px;
+        }
+
+        > div {
+            display: none;
+            position: absolute;
+            width: 100%;
+
+            > button {
+                padding: 5px;
+                background-color: white;
+                width: 100%;
+                border: 1px solid gray;
+                display: block;
+                cursor: pointer;
+                transition: 0.2s;
+
+                &:hover {
+                    color: blue;
+                }
+            }
+        }
+    }
+
     &__inputs {
         padding: 1rem;
         width: 80%;
