--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -51,7 +51,7 @@
 
         > button {
             @include buttonPrimary;
-            margin-bottom: 10px;
+            margin: 1rem auto;
         }
 
         > div {
